# python-benchmark-thread-vs-process

./: .flake8  .pre-commit-config.yaml  README.md  pre_commit.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
python-benchmark-thread-vs-process/: __init__.py  multi_thread.py  run_benchmark.py
python_benchmark_thread_vs_process/: TableIt.py  __init__.py  cpuinfo.py  main.py  multi_process.py  multi_thread.py  operation.py
tests/: test_main.py  test_operation.py  test_process.py  test_thread.py
