[metadata]
name=python-benchmark-thread-vs-process
download_url=https://github.com/minhng-info/python-benchmark-thread-vs-process/tarball/master
description=Python Benchmark: multi-thread vs multi-process
long_description=file:README.md
long_description_content_type=text/markdown
author=minhng-info
author_email=minhng92@gmail.com
maintainer=minhng-info
maintainer_email=minhng92@gmail.com
url=https://github.com/minhng-info/python-benchmark-thread-vs-process
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation

[options]
packages=
    blank
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4,
#install_requires=
#    scake

[bdist_wheel]
universal=1